fix: :lipstick: fix profile editor being missaligned

--- a/src/app/organisms/profile-editor/ProfileEditor.scss
+++ b/src/app/organisms/profile-editor/ProfileEditor.scss
@@ -3,7 +3,7 @@
 
 .profile-editor {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .profile-editor__info,
